// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute Bitcoin list protocol should return success 1`] = `
Object {
  "data": Object {
    "result": "75100045155",
  },
  "jobRunID": "1",
  "result": "75100045155",
  "statusCode": 200,
}
`;

exports[`execute Ethereum list protocol should return success 1`] = `
Object {
  "data": Object {
    "result": "220646158354962165",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "220646158354962165",
  "statusCode": 200,
}
`;

exports[`execute Filecoin Gemini protocol should return success 1`] = `
Object {
  "data": Object {
    "result": "127530375584000000000000",
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;

exports[`execute Filecoin list protocol w/ miner format address should return success 1`] = `
Object {
  "data": Object {
    "result": "127530375584000000000000",
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;
